[workspace]
resolver = "2"
members = [
  "router",
  "tt",
  "config",
  "data",
  "app/api", "test_mongodb",
]

[workspace.dependencies]
serde = "^1.0"
mongodb = "2.8.2"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
[profile.docker]
inherits = "release"
opt-level = 3
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
panic = "abort"
lto = true

