[workspace]
resolver = "2"
members = [
  "router",
  "tt",
  "config",
  "data",
  "app/api",
]

[workspace.dependencies]
serde = "^1.0"
mongodb = "2.8.2"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.45", features = ["full"] }

[profile.docker]
inherits = "release"
opt-level = 3
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
panic = "abort"
lto = true

